[gd_scene load_steps=8 format=2]

[ext_resource path="res://Screens/Menu/Planetnv2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://Screens/Level/3866530831_df9150ddcb_k.jpg" type="Texture" id=3]
[ext_resource path="res://Screens/Menu/theme.tres" type="Theme" id=4]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;


uniform float speed;


void fragment () {
	COLOR = texture(TEXTURE, vec2(UV.x + TIME * speed, UV.y));
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/speed = 0.002

[sub_resource type="DynamicFont" id=1]
size = 63
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.172549 )
material = SubResource( 3 )
position = Vector2( 1000, 304 )
texture = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -336.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer/CenterContainer"]
margin_left = 159.0
margin_top = 97.0
margin_right = 865.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 1 )
text = "Light Them Up"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 48.0
margin_top = 440.0
margin_right = 296.0
margin_bottom = 558.0
custom_constants/separation = 36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 248.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer2"]
margin_right = 248.0
margin_bottom = 14.0
text = "A game by:"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 248.0
margin_bottom = 32.0
custom_constants/separation = 0

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 94.0
margin_bottom = 14.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0.835294, 1, 1 )
text = "@SanderVhove"

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 94.0
margin_right = 229.0
margin_bottom = 14.0
text = " - Programming & Art"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 248.0
margin_bottom = 50.0
custom_constants/separation = 0

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 106.0
margin_bottom = 14.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0.835294, 1, 1 )
text = "@jordanguerette"

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 106.0
margin_right = 214.0
margin_bottom = 14.0
text = " - Sound & Music"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 86.0
margin_right = 248.0
margin_bottom = 118.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
margin_right = 248.0
margin_bottom = 14.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 195.0
margin_bottom = 14.0
text = "Sander would like to thank his "

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 195.0
margin_right = 244.0
margin_bottom = 14.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0.835294, 1, 1 )
text = "Patreon"

[node name="Label3" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 244.0
margin_right = 248.0
margin_bottom = 14.0
text = ":"

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 248.0
margin_bottom = 32.0
text = "Gilles De Mey"

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer"]
margin_top = 256.0
margin_right = 1024.0
margin_bottom = 368.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/CenterContainer2"]
margin_left = 489.0
margin_top = 38.0
margin_right = 535.0
margin_bottom = 74.0
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Play"

[connection signal="gui_input" from="CanvasLayer/VBoxContainer/VBoxContainer2/HBoxContainer/Label2" to="." method="_on_Label2_gui_input"]
[connection signal="gui_input" from="CanvasLayer/VBoxContainer/VBoxContainer2/HBoxContainer2/Label2" to="." method="_on_Jordan_gui_input"]
[connection signal="gui_input" from="CanvasLayer/VBoxContainer/VBoxContainer/HBoxContainer3/Label2" to="." method="_on_patreon_gui_input"]
[connection signal="pressed" from="CanvasLayer/CenterContainer2/Button" to="." method="_on_Button_pressed"]
